Edward Kats 1. Removed extended questions card size styling 2. Fixed extended questions importance size and aligned to center

--- a/si-gateway/si-gateway-webapp/src/client/src/styles/styles.less
+++ b/si-gateway/si-gateway-webapp/src/client/src/styles/styles.less
@@ -154,7 +154,7 @@ body {
 .card-question {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
-  width: 31vw;
+  width: 50%;
   height: 35vh;
   margin-left: auto;
   margin-right: auto;
@@ -169,8 +169,8 @@ body {
 .cardContainer {
   display: grid;
   grid-template-areas: "header header" "content content" "footer footer-btn";
-  grid-template-rows: 7vh 21vh 5vh;
-  grid-template-columns: 24vw 5vw;
+  grid-template-rows: 50px 200px 70px;
+  grid-template-columns: 450px 80px;
   padding: 5px 16px;
 }
 .cardContainer > header{
@@ -236,12 +236,12 @@ body {
 
 .arrow-back {
   .arrow-page;
-  left: 10vw;
+  left: 20%;
 }
 
 .arrow-next {
   .arrow-page;
-  right: 10vw;
+  right: 20%;
 }
 
 .arrow-back:hover, .arrow-next:hover {
@@ -253,7 +253,7 @@ body {
 .error-page {
 
     width: 100% !important;
-    height: 100vh ;
+    height: 82vh ;
     background: radial-gradient(ellipse 72% 45% at 50% 35%, @dark-primary-color 7%, @primary-color 30% , #fff 70% ) !important;
 }
 .error-msg {
